Correct body overflow issue

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -12,6 +12,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   scroll-behavior: smooth;
 
   &, input, select {
